--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -139,7 +139,7 @@
   description: 악성메일 차단 솔루션 (장비상태 모니터링, 악성메일 로그) UI/UX 리뉴얼
   summary: <ul class="resume-item-list"><li>디자인 시안 수정 및 정리</li><li>마크업 설계 및 퍼블리싱</li><li>hbs 데이터 바인딩 및 in output 처리</li><li>express 프론트엔드 서버 router, middleware 개발</li><li>passport를 적용하여 인증 session관리, 타임아웃 설정 등</li><li>프로젝트 리더로 개발 참여</li></ul>
   img: <img src="./images/mars_1.jpg"/><img src="./images/mars_2.jpg"/>  
-  skills: <span>html</span><span>css</span><span>javascript</span><span>jQuery</span><span>ajax</span><span>D3.js</span><span>nodejs</span><span>express</span>
+  skills: <span>html</span><span>css</span><span>javascript</span><span>jQuery</span><span>ajax</span><span>D3.js</span><span>nodejs</span><span>express</span><span>passport</span>
   
 
 
